# family-recipes

./: .editorconfig  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  README.md  compose.yaml  docker-compose.dev.yml  env.d.ts  exec.sh  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pwa.config.ts  pyrightconfig.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
backend/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  REDIS-TESTING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/api/: router.py
backend/app/common/: id_utils.py  pagination.py  repository_utils.py
backend/app/core/: app_factory.py  config.py  convert_empty_strings_middleware.py  database.py  health_details.py  helpers.py  limiter.py  middleware.py  migrations.py  oauth.py  oauth_state_store.py  recaptcha.py  redis.py  security_headers.py  static.py
backend/app/exceptions/: exception_handler.py
backend/app/seeders/: __init__.py
backend/cli/: __init__.py  main.py  utils.py
backend/cli/commands/: __init__.py  (+5 more)
backend/migrations/: 000_create_schema_migrations.py  001_add_ingredient_shopping_category_key.py  README.md
backend/scripts/: MIGRATION.md  migrate-db-simple.sh  migrate-db.sh  restart-and-migrate.sh
backend/tests/: conftest.py  test_admin_authorization.py  test_auth_service.py  test_auth_utils.py  test_billing_service.py  test_convert_empty_strings_middleware.py  test_email_file_adapter.py  test_email_service.py  test_family_service.py  test_health_details.py  test_ingredient_summation.py  test_main.py  test_oauth_2fa_login.py  test_oauth_state_store.py  test_rate_limiter.py  test_recipe_import_service.py  test_recipes_service.py  test_shopping_service.py  test_two_factor_login.py  test_two_factor_utils.py  test_utils.py
(+607 files in other folders)
